implementing second assigment